mpris2: fix setting volume

BUG: 498872